--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       <p id="wrd2">Imaging</p>
       <p id="wrd3"><span id="wrd3p1">no</span><span id="wrd3p2"> boundries</span></p>
 
-      <div id="cont-section">
+      <div id="cont-section" class="visible">
         <div id="cont-wrapper">
             <img class="continent" id="c1p1" src="assets/img/c1p9.png">
             <img class="continent" id="c1p2" src="assets/img/c1p8.png">
