--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   </head>
   <body>
     <div id="custom-anim">
-      <p>Your Text Here !!!</p>
+      <p>A highway</p>
 
       <div id="cont-section">
         <div id="cont-wrapper">
