--- a/index.html
+++ b/index.html
@@ -35,7 +35,8 @@
         </div>
       </div>
     </div>
-    <script src="assets/js/origin_states.js"></script>    
+    <script src="assets/js/origin_state.js"></script>    
+    <script src="assets/js/start_state.js"></script>    
     <script src="assets/js/animator.js"></script>    
   </body>
 </html>
