--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
   <body>
     <div id="custom-anim">
       <p>A highway</p>
+      <p id="wrd2">Imaging</p>
+      <p id="wrd3"><span id="wrd3p1">no</span><span id="wrd3p2"> boundries</span></p>
 
       <div id="cont-section">
         <div id="cont-wrapper">
